--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 
 <head>
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+<style>
+	model-viewer{
+		width: 600px;
+		height: 600px;
+		margin: 0 auto;
+	}
+</style>
 </head>
 
 <body>
@@ -11,11 +18,15 @@
 	src="assets/tablet.glb" 
 	ar 
 	ar-modes="webxr scene-viewer quick-look" 
-	seamless-poster 
 	shadow-intensity="1" 
+	auto-rotate
 	camera-controls 
 	enable-pan>	
 	</model-viewer>
 </body>
 
 </html>
+
+
+
+
