--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+<!doctype html>
 <html>
 
 <head>
@@ -25,19 +25,6 @@
 	</model-viewer>
 </body>
 
-</html> -->
-
-
-
-<!DOCTYPE html>
-<html>
-<body>
-
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
-</body>
 </html>
 
 
