--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	alt="Tablet di prova" 
 	src="assets/tablet.glb" 
 	ar 
-	ar-modes="webxr scene-viewer quick-look" 
-	shadow-intensity="1" 
+	 
+	
 	auto-rotate
 	camera-controls 
 	enable-pan>	
@@ -30,3 +30,14 @@
 
 
 
+<!-- <model-viewer 
+ar 
+ar-modes="webxr scene-viewer quick-look" 
+camera-controls 
+src="../../shared-assets/models/Astronaut.glb" 
+alt="A 3D model of an astronaut">
+
+  <button slot="ar-button" style="background-color: white; border-radius: 4px; border: none; position: absolute; top: 16px; right: 16px; ">
+      👋 Activate AR
+  </button>
+</model-viewer> -->
